    `-prefix`.
  - Added new "-from-list" option to chicken-install.
  - Eggs can now be installed and located in multiple directories,
    using the `CHICKEN_REPOSITORY_PATH` + `CHICKEN_INSTALL_REPOSITORY`
    environment variables.
  - Static compilation of eggs is now fully supported and static
    versions of compiled eggs are available by default.

- Foreign function interface
  - The foreign type specifier "ssize_t" is now accepted, and "size_t"
    arguments now only accept positive integers.  Return values of
    type size_t are no longer truncated on 32-bit platforms.


4.13.0

- Security fixes
  - CVE-2017-6949: Remove unchecked malloc() call in SRFI-4 constructors
    when allocating in non-GC memory, resulting in potential 1-word
    buffer overrun and/or segfault (thanks to Lemonboy).
  - CVE-2017-9334: `length' no longer crashes on improper lists (fixes
    #1375, thanks to "megane").
  - CVE-2017-11343: The randomization factor of the symbol table was
    set before the random seed was set, causing it to have a fixed value
    on many platforms.

- Core Libraries
  - Unit "posix": If file-lock, file-lock/blocking or file-unlock are
    interrupted by a signal, we now retry (thanks to Joerg Wittenberger).
  - char-ready? on string ports now also returns #t at EOF, as per R5RS;
    in other words, it always returns #t (thanks to Moritz Heidkamp)
  - Unit srfi-4: Fixed typo that broke SRFI-17 generalised set! syntax
    on s8vectors (thanks to Kristian Lein-Mathisen).
  - Large literals no longer crash with "invalid encoded numeric literal"
    on mingw-64 (#1344, thanks to Lemonboy).
  - Unit irregex: Fix bug that prevented multibyte UTF-8 character sets
    from being matched correctly (Thanks to Lemonboy and Chunyang Xu).

- Runtime system:
  - The profiler no longer uses malloc from a signal handler which may
    cause deadlocks (#1414, thanks to Lemonboy).
  - The scheduler no longer indirectly hangs on to the old thread