@@ -30,11 +30,13 @@
 (define default-dynamic-program-link-options '())
 (define default-static-extension-link-options '())
 (define default-dynamic-extension-link-options '())
-(define default-extension-linkage '(static dynamic))
 (define default-program-linkage '(dynamic))
 (define default-static-compilation-options '("-O2" "-d1"))
 (define default-dynamic-compilation-options '("-O2" "-d1"))
 (define default-import-library-compilation-options '("-O2" "-d0"))
+
+(define default-extension-linkage
+  (if staticbuild '(static) '(static dynamic)))
 
 (define +unix-executable-extension+ "")
 (define +windows-executable-extension+ ".exe")
@@ -411,7 +413,8 @@
                   (if (memq 'dynamic link)
                       (list (apply install-dynamic-extension ext))
                       '())
-                  (if (uses-compiled-import-library? (get-keyword mode: ext))
+                  (if (and (memq 'dynamic link)
+                           (uses-compiled-import-library? (get-keyword mode: ext)))
                       (map (lambda (mod)
                              (apply install-import-library
                                     mod (cdr ext))) ; override name
